[gd_scene load_steps=24 format=3 uid="uid://dkvmshruapant"]

[ext_resource type="Script" path="res://coachoffice.gd" id="1_gvki0"]
[ext_resource type="Texture2D" uid="uid://cyhty3vqh0qc2" path="res://faces/man (1).png" id="2_nhdc7"]
[ext_resource type="Texture2D" uid="uid://dlnmoc0ed866j" path="res://faces/man (2).png" id="3_fai58"]
[ext_resource type="Texture2D" uid="uid://b5h5blrcpar86" path="res://faces/man (3).png" id="4_58sub"]
[ext_resource type="Texture2D" uid="uid://befr8mbdtne8t" path="res://faces/man (4).png" id="5_vp87o"]
[ext_resource type="Texture2D" uid="uid://dpkbplwyqj6xc" path="res://faces/man (5).png" id="6_a30pk"]
[ext_resource type="Texture2D" uid="uid://ckx2820j1c4r6" path="res://faces/man (6).png" id="7_ir7mv"]
[ext_resource type="Texture2D" uid="uid://cn4umisusfo8n" path="res://faces/businesswoman (1).png" id="8_y7x2j"]
[ext_resource type="Texture2D" uid="uid://dyi0kwo4srpv" path="res://faces/businesswoman.png" id="9_yuarg"]
[ext_resource type="Texture2D" uid="uid://cw5fudbgl47ij" path="res://faces/man (7).png" id="10_18yi2"]
[ext_resource type="Texture2D" uid="uid://qwgq3ikvutbl" path="res://faces/man (8).png" id="11_rfofn"]
[ext_resource type="Texture2D" uid="uid://bg8ay80b0g0cj" path="res://faces/man (9).png" id="12_ndach"]
[ext_resource type="Texture2D" uid="uid://cg616vqwjdx6t" path="res://faces/man (10).png" id="13_rrc6x"]
[ext_resource type="Texture2D" uid="uid://c7va68s2ayqri" path="res://faces/man (11).png" id="14_spxmk"]
[ext_resource type="Texture2D" uid="uid://dp6gsvvxnse3j" path="res://faces/man (12).png" id="15_mgl5y"]
[ext_resource type="Texture2D" uid="uid://b1nufiuqu23m4" path="res://faces/man.png" id="16_kqe1i"]
[ext_resource type="Texture2D" uid="uid://ck2v3ld0rtbqh" path="res://faces/woman (1).png" id="17_qkfvl"]
[ext_resource type="Texture2D" uid="uid://ccm36sfhum7jp" path="res://faces/woman (2).png" id="18_k6x4u"]
[ext_resource type="Texture2D" uid="uid://7odi1530d6h" path="res://faces/woman (3).png" id="19_gglql"]
[ext_resource type="Texture2D" uid="uid://cgk7vey3a8pvm" path="res://faces/woman (4).png" id="20_l4ani"]
[ext_resource type="Texture2D" uid="uid://cxn8iunw5h6nv" path="res://faces/woman (5).png" id="21_qtw13"]
[ext_resource type="Texture2D" uid="uid://c25hid2rybvvy" path="res://faces/woman.png" id="22_s4dao"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dy511"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nhdc7")
}, {
"duration": 1.0,
"texture": ExtResource("3_fai58")
}, {
"duration": 1.0,
"texture": ExtResource("4_58sub")
}, {
"duration": 1.0,
"texture": ExtResource("5_vp87o")
}, {
"duration": 1.0,
"texture": ExtResource("6_a30pk")
}, {
"duration": 1.0,
"texture": ExtResource("7_ir7mv")
}, {
"duration": 1.0,
"texture": ExtResource("8_y7x2j")
}, {
"duration": 1.0,
"texture": ExtResource("9_yuarg")
}, {
"duration": 1.0,
"texture": ExtResource("10_18yi2")
}, {
"duration": 1.0,
"texture": ExtResource("11_rfofn")
}, {
"duration": 1.0,
"texture": ExtResource("12_ndach")
}, {
"duration": 1.0,
"texture": ExtResource("13_rrc6x")
}, {
"duration": 1.0,
"texture": ExtResource("14_spxmk")
}, {
"duration": 1.0,
"texture": ExtResource("15_mgl5y")
}, {
"duration": 1.0,
"texture": ExtResource("16_kqe1i")
}, {
"duration": 1.0,
"texture": ExtResource("17_qkfvl")
}, {
"duration": 1.0,
"texture": ExtResource("18_k6x4u")
}, {
"duration": 1.0,
"texture": ExtResource("19_gglql")
}, {
"duration": 1.0,
"texture": ExtResource("20_l4ani")
}, {
"duration": 1.0,
"texture": ExtResource("21_qtw13")
}, {
"duration": 1.0,
"texture": ExtResource("22_s4dao")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gvki0")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 1183.0
offset_bottom = 675.0
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 14.0
offset_right = 272.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "Coach's Office"

[node name="Label2" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 89.0
offset_right = 405.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 40
text = "Name:"

[node name="Label3" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 135.0
offset_right = 405.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 40
text = "Offensive Scheme:"

[node name="Label4" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 180.0
offset_right = 405.0
offset_bottom = 249.0
theme_override_font_sizes/font_size = 40
text = "Defensive Scheme:"

[node name="Label6" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 222.0
offset_right = 461.0
offset_bottom = 291.0
theme_override_font_sizes/font_size = 40
text = "AD Mood:"

[node name="Label5" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 466.0
offset_top = 295.0
offset_right = 827.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 40
text = "Season Stats:"

[node name="Portrait" type="AnimatedSprite2D" parent="."]
position = Vector2(1016, 144)
scale = Vector2(0.365234, 0.365234)
sprite_frames = SubResource("SpriteFrames_dy511")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 556.0
offset_right = 753.0
offset_bottom = 619.0
theme_override_font_sizes/font_size = 40
text = "Return to Game"

[node name="Tree" type="Tree" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 359.0
offset_right = 1090.0
offset_bottom = 539.0
columns = 10
column_titles_visible = true
hide_root = true
select_mode = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
